<resources>
    <string name="app_name">Zailet</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="enterUsername">Enter Username</string>
    <string name="enterPassword">Enter Password (6 characters at least)</string>
    <string name="enterEmail">Enter Email</string>
    <string name="register">Register</string>
    <string name="search">Search for Blogs</string>
    <string name="search_hint">Search..</string>
</resources>
