<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:id="@+id/enterusername"
        android:textSize="20sp"
        android:hint="@string/enterUsername"
        android:layout_margin="16dp"
        android:textColor="@android:color/background_dark"
        android:inputType="textPersonName" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:id="@+id/enterpassword"
        android:textSize="20sp"
        android:hint="@string/enterPassword"
        android:layout_margin="16dp"
        android:textColor="@android:color/background_dark"
        android:inputType="textPersonName" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:id="@+id/enteremail"
        android:textSize="20sp"
        android:hint="@string/enterEmail"
        android:layout_margin="16dp"
        android:textColor="@android:color/background_dark"
        android:inputType="textPersonName" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/register"
        android:text="@string/register"
        android:layout_margin="16dp" />

</LinearLayout>

