<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        tools:context="com.example.android.zailet.LoginActivity"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
    <EditText
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:id="@+id/username"
        android:textSize="20sp"
        android:hint="@string/username"
        android:layout_margin="16dp"
        android:textColor="@android:color/background_dark"
        android:inputType="textPersonName" />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:textSize="20sp"
        android:id="@+id/password"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:layout_margin="16dp" />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/login"
        android:text="@string/login"
        android:layout_margin="16dp" />

    <TextView
        android:id="@+id/createAccount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_margin="16dp"
        android:textColor="@color/colorPrimaryDark"
        android:textStyle="bold"
        android:text="Create Account" />
</LinearLayout>
